@@ -3,8 +3,7 @@ id,task,priority,size,group,deadline,status,flag
 2,"Mow the lawn",2,2,1,,2,
 3,"Wash the car",2,2,1,,2,
 4,"Paint the fence",1,2,1,,,
-6,"Intramural hockey game",1,2,4,,,
-7,"Canucks hockey game",3,3,4,20170305,,
+7,"Canucks hockey game",2,3,4,20170305,,,"Update the TODO task"
 8,"Buy steel-toed boots",2,1,3,,,
 9,"Learn French",1,3,3,20161231,1,
 10,"Hit the gym",2,1,4,,2,
